testsuite/positive/bug-1035.n
using System;

public class AException : Exception
{
    public F () : void
    {
    }
}

public class BException : Exception
{
    public static F () : void
    {
        System.Console.WriteLine ("OK");
    }
}

public class M
{
    public static Main () : void
    {
        def h (action)
        {
            try
            {
                action ();
            }
            catch
            {
                | ex is AException =>
                    h(() => ex.F ());
                | _ is BException =>
                    h(() => BException.F ());
            }
        }

        h(() => BException.F ());
    }
}

/*
BEGIN-OUTPUT
OK
END-OUTPUT
*/